create api and page for article/id/comments
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/run.js",
     "start:resetdb": "FORCE_DB_RESET=true node src/run.js",
-    "seeddata": "node scripts/seed_sampledata.js"
+    "seeddata": "DEBUG=* node scripts/seed_sampledata.js"
   },
   "author": "",
   "license": "ISC",
